added some new Element methods and FileManager class started intergating into ushop admin

--- a/public_html/admin/components/ushop/css/ushop.css
+++ b/public_html/admin/components/ushop/css/ushop.css
@@ -78,7 +78,7 @@ fieldset { width:auto; }
 	margin-right:10px;
 }
 
-#details, #price, #image { float:left; }
+#details, #price, #image_upload { float:left; }
 
 #description, #attributes {
 	position:relative;
