--- a/public_html/templates/modernviewblue/index.html
+++ b/public_html/templates/modernviewblue/index.html
@@ -2,7 +2,7 @@
 	<div id="top_wrap">
 		<div id="title">
 			<h1 id="logo">
-				<img src="/templates/modernviewblue/images/charismabooks2.png" alt="your Logo" title="your Logo" border="0" />
+				<img src="/userfiles/<!--{SITE_FOLDER}-->/image/<!--{SITE_LOGO}-->" alt="your Logo" title="your Logo" border="0" />
 			</h1>
 		</div>
 		<div id="menu">
@@ -70,6 +70,3 @@
 		<p><!--{BENCHMARK}--></p>
 	</div>
 </div>
-<script type="text/javascript">
-	COT("https://www.charismabooks.co.uk/userfiles/image/cot.gif", "SC2", "none");
-</script>
