--- a/public_html/admin/templates/admin/login.html
+++ b/public_html/admin/templates/admin/login.html
@@ -4,31 +4,31 @@
 	</div>
 	<div id="outerDivBody" class="brdPad">
 		<div id="leftDivWrap">
-			<!--{MODULE[left]}-->
+			<module name="left"></module>
 			<div class="center">
-				<img src="<!--{ADMIN_URL}-->/Common/images/shaunfreemanlogo.png" />
+				<img src="/Common/images/shaunfreemanlogo.png" />
 			</div>
 		</div>
 		<!-- End menuDivWrap -->
 		<!-- Main Content -->
 		<div id="mainDivWrap">
 			<div id="mainDivHeader" class="headerDiv">
-				<span><!--{PAGE}--></span>
+				<param name="page" />
 			</div>
 				<div id="mainDiv" class="makeScroll">
 					<noscript>
 						<h1>Please Enable Javascript</h1>
 					</noscript>
 					<div id="loginSidePanel">
-						<img src="<!--{ADMIN_URL}-->/templates/admin/images/128x128/Lock.png" />
+						<img src="/templates/admin/images/128x128/Lock.png" />
 						<p>Use a valid username and password to gain access to the Administrator Back-end.</p>
-						<p><a href="<!--{SITE_URL}-->">Return to site Home Page</a></p>
+						<p><a href="#">Return to site Home Page</a></p>
 						<div class="both"><!-- --></div>
 					</div>
 					<div id="adminLoginWrap">
 						<!-- content starts here -->
-						<!--{ERROR}-->
-						<!--{CONTENT}-->
+						<param name="error" />
+						<param name="content" />
 						<!-- content ends here -->
 					</div>
 				</div>
@@ -37,12 +37,12 @@
 			<p>
 			<span>
 				Powered By Uthando
-				<img src="<!--{ADMIN_URL}-->/Common/images/Safari_Web_Badge.png" />
-				<img src="<!--{ADMIN_URL}-->/Common/images/firefox.gif" />
-				<img src="<!--{ADMIN_URL}-->/Common/images/css.png" />
-				<img src="<!--{ADMIN_URL}-->/Common/images/xhtml.png" />
+				<img src="/Common/images/Safari_Web_Badge.png" />
+				<img src="/Common/images/firefox.gif" />
+				<img src="/Common/images/css.png" />
+				<img src="/Common/images/xhtml.png" />
 			</span>
-			<span class="pagegen"><!--{PAGE_GENERATED}--></span>
+			<span class="pagegen"><param name="benchmark" /></span>
 			</p>
 		</div>
 	</div>
