filemanager updates for ushop products

--- a/public_html/admin/components/ushop/css/ushop.css
+++ b/public_html/admin/components/ushop/css/ushop.css
@@ -21,6 +21,8 @@ Buttons
 Tables
 */
 
+/*.morphtabs_panel table { width: 100%; }*/
+
 #categories table th  { text-align:left; }
 
 #categories table tr:first-child th { text-align:center; }
