--- a/public_html/admin/templates/admin/index.html
+++ b/public_html/admin/templates/admin/index.html
@@ -16,14 +16,23 @@
 				<param name="page" />
 				<param name="login_status" />
 			</div>
-			<div id="mainDiv" class="makeScroll">
+			<div id="mainDiv">
 				<noscript>
 					<h1>Please Enable Javascript</h1>
 				</noscript>
 				<!-- content starts here -->
 				<param name="error" />
-				<param name="content" />
-				<!-- content ends here -->
+				<div class="scroller">
+					<param name="content" />
+					<!-- content ends here -->
+					<div class="scrollarea">
+						<div class="scrollBack"></div>
+						<div class="scrollBarContainer">
+							<div class="scrollKnob"></div>
+						</div>
+						<div class="scrollForward"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div id="footerDiv" class="headerDiv">
