--- a/public_html/templates/walls/index.html
+++ b/public_html/templates/walls/index.html
@@ -1,23 +1,23 @@
 <div id="container">
 	<!-- header -->
 	<div id="header">
-		<div id="logo"><a href="#"><!--{MERCHANT_NAME}--></a></div>
+		<div id="logo"><a href="#"><param name="merchant_name" /></a></div>
 			<div id="menu">
-				<!--{MODULE[top menu]}-->
+				<module name="top menu"></module>
 			</div>
 	</div>
 	<!--end header -->
 	<!-- main -->
 	<div id="main">
 		<div id="sidebar">
-			<!--{MODULE[left]}-->
+			<module name="left"></module>
 		</div>
 
 		<div id="text">
 			<!-- content starts here -->
-			<!--{LOGIN_STATUS}-->
-			<!--{ERROR}-->
-			<!--{CONTENT}-->
+			<param name="login" />
+			<param name="error" />
+			<param name="content" />
 			<!-- content ends here -->
 		</div>
 	</div>
@@ -26,7 +26,7 @@
 	<div id="footer">
 		<div id="left_footer">
 			<p>
-				&copy; Copyright <!--{DATE}--> <!--{MERCHANT_NAME}-->. All Rights Reserved.
+				&copy; Copyright <param name="date" />&nbsp;<param name="merchant_name" />. All Rights Reserved.
 				<br />
 				<span>
 					<img src="/Common/images/uthando.png" />&nbsp;<a href="http://www.shaunfreeman.co.uk">Powered By Uthando</a>
@@ -35,7 +35,7 @@
 		</div>
 		<div id="right_footer">
 			<!-- Please do not change or delete this links. Read the license! Thanks. :-) -->
-			<a href="http://www.realitysoftware.ca/website-design.html">Website design</a> by <a href="http://www.realitysoftware.ca">Reality Software</a><br /><span id="benchmark"><!--{BENCHMARK}--></span>
+			<a href="http://www.realitysoftware.ca/website-design.html">Website design</a> by <a href="http://www.realitysoftware.ca">Reality Software</a><br /><span id="benchmark"><param name="benchmark" /></span>
 		</div>
 	</div>
 	<!-- end footer -->
