--- a/public_html/admin/templates/admin/login.html
+++ b/public_html/admin/templates/admin/login.html
@@ -22,7 +22,7 @@
 					<div id="loginSidePanel">
 						<img src="/templates/admin/images/128x128/Lock.png" />
 						<p>Use a valid username and password to gain access to the Administrator Back-end.</p>
-						<p><a href="#">Return to site Home Page</a></p>
+						<p><a href="/">Return to site Home Page</a></p>
 						<div class="both"><!-- --></div>
 					</div>
 					<div id="adminLoginWrap">
