--- a/Uthando-Error/error.css
+++ b/Uthando-Error/error.css
@@ -1,3 +1,4 @@
+html { background-color: #000; }
 #uthandoLogo {
 	background: url(/images/uthandocms.png) no-repeat center top;
 	padding-top: 90px;
@@ -10,12 +11,5 @@ img {
 	margin-left: auto;
 	margin-right: auto;
 }
-
-a {
-	color: #000;
-	text-decoration: none;
-}
-
-a:hover { text-decoration: underline; }
 
 .center { text-align: center; }
