--- a/Uthando-CSS/admin/FileManager.css
+++ b/Uthando-CSS/admin/FileManager.css
@@ -355,7 +355,8 @@ div.filemanager-container .file .file-cancel {
 	padding-left: 5px;
 	float: right;
 }
-div.filemanager-container .file .file-progress {
+
+.file-progress {
 	margin-top: 5px;
 	float: right;
 	width: 125px;
