--- a/application/views/scripts/user/index.phtml
+++ b/application/views/scripts/user/index.phtml
@@ -28,5 +28,6 @@
 </div>
 <!--<img width="8" height="53" id="scrollRight" alt="scroll right" src="/images/right_scroll.png" />-->
 </div>
+<?php else: ?>
 <?php endif; ?>
 
