--- a/application/views/scripts/user/list.phtml
+++ b/application/views/scripts/user/list.phtml
@@ -1,3 +1,24 @@
+<div id="menuToolbarWrap">
+<!--<img width="8" height="53" id="scrollLeft" alt="scroll left" src="/images/left_scroll.png" />-->
+<div id="menuToolbar">
+
+  <ul id="iconMenuStrip">
+    <li>
+      <a id="new_user-24" class="Tips button iconImgs" href="<?= $this->url(array(
+        'module'    => 'core',
+        'controller'    => 'user',
+        'action'        => 'new'
+    ), 'admin', true) ?>" title="New User" rel="Create a new user.">
+        <span class="iconCaptions">New User</span>
+      </a>
+    </li>
+  </ul>
+  <div class="both"></div>
+
+</div>
+<!--<img width="8" height="53" id="scrollRight" alt="scroll right" src="/images/right_scroll.png" />-->
+</div>
+
 <h2>Current Users</h2>
 <table class="datatable">
     <thead>
