--- a/Uthando-CSS/public/siteStyles.css
+++ b/Uthando-CSS/public/siteStyles.css
@@ -1,4 +1,151 @@
 /*
+Blog
+*/
+
+#blogList .calendar_icon, #blog .calendar_icon {
+	/*width: 50px;*/
+	float:left;
+	margin-right: 10px;
+}
+
+#blogList .datetime, #blog .datetime {
+    border-right: 1px dotted gray;
+    padding-right: 0px;
+    padding-top: 2px;
+    padding-bottom:0px;
+    margin-bottom:0px;
+    margin-top: 0px;
+    vertical-align: top;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* SPACE BETWEEN CALENDAR ICON AND HEADER (TITLE AND AUTHOR) */
+.spacer_right {
+    padding: 0px 0px 10px 4px;
+}
+
+#blogList p, #blog p {
+    padding: 0px;
+    margin: 0px;
+}
+
+#blogList div, #blog div {
+    margin: 10px 0px;
+}
+
+/* DAY OF WEEK */
+#blogList .top, #blog .top {
+    font-size: 0.8em;
+    letter-spacing:0.2em;
+    text-transform:uppercase;
+    text-align: center;
+    color: #4f7ba4;
+/*
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+    padding-top: 3px;
+    padding-bottom: 0px;
+    padding-left: 3px;
+    padding-right: 3px;*/
+}
+
+/* DAY */
+#blogList .day, #blog .day {
+    font-size: 2.6em;
+    font-weight: bold;
+    text-align: center;
+
+    /*padding-left: 3px;
+    padding-right: 3px;
+    margin-top: 1px;
+    margin-bottom: 0px;*/
+    color: #FC8F30;
+}
+
+/* MONTH */
+#blogList .mon, #blog .mon {
+    font-size: 1.0em;
+    font-weight: bold;
+    text-transform:uppercase;
+    text-align: center;
+
+   /* padding-left: 3px;
+    padding-right: 3px;
+    margin-top: 1px;
+    margin-bottom: 0px;*/
+    color: #FC8F30;
+}
+
+/* YEAR*/
+#blogList .year, #blog .year {
+    font-size: 0.7em;
+    letter-spacing: 0.15em;
+    text-transform:uppercase;
+    text-align: center;
+/*
+    margin-top: 1px;
+    margin-bottom: 0px;*/
+    color: #4f7ba4;
+}
+
+/* Dates */
+#blogList .iteminfo, #blog .iteminfo {
+	font-size: 1.2em;
+	padding-bottom: 15px;
+}
+
+#blogList .contentheading, #blog .contentheading {
+    height: 1.2em;
+	font-size: 1.8em;
+	padding: 0px 25px 0px 0px;
+	margin: 0px;
+	font-weight: bold;
+}
+
+#comments .commentWrap {
+    border-bottom: 1px solid #e0e0e0;
+    width: 95%;
+}
+
+#comments .commentName {
+    font-weight: bold;
+    font-size: 16px;
+    color: midnightblue;
+}
+
+#comments .commentName a {
+    color: midnightblue;
+}
+
+#comments .commentDate {
+    color: #666;
+    font-variant: small-caps;
+    font-weight: bold;
+}
+
+#comments .commentAvatar {
+    height: 45px;
+    width: 45px;
+    margin: 0px;
+    vertical-align: middle;
+}
+
+#comments .commentHead {
+    margin: 0px;
+    padding: 0px;
+    margin-top: -43px;
+    margin-left: 45px;
+    padding-left: 5px;
+    vertical-align: middle;
+}
+
+#comments .commentHead p {
+    margin: 0px;
+    padding: 0px;
+}
+
+/*
 Pagination
 */
 .paginate_wrap {
