--- a/application/modules/ublog/views/scripts/index/view.phtml
+++ b/application/modules/ublog/views/scripts/index/view.phtml
@@ -37,7 +37,7 @@
     </div>
     <div id="comments">
         <h2>Comments</h2>
-        <?php foreach ($this->blog->comments as $comment): ?>
+        <?php foreach ($this->comments as $comment): ?>
         <div class="commentWrap">
             <div class="commentAvatar">
                 <?= $this->gravatar(
