--- a/application/modules/ublog/views/scripts/index/view.phtml
+++ b/application/modules/ublog/views/scripts/index/view.phtml
@@ -1,3 +1,19 @@
+<?php
+    $this->editor(
+        array('/uthando-js/MooTools/mooeditable/Source/MooEditable/MooEditable.js'),
+        array('/uthando-js/MooTools/mooeditable/Assets/MooEditable/MooEditable.css'),
+        array(
+            'element'  => 'comment',
+            'options'   => array(
+                'actions'       => "'bold italic underline strikethrough | formatBlock justifyleft justifyright justifycenter justifyfull | insertunorderedlist insertorderedlist indent outdent | undo redo | createlink unlink | toggleview'",
+                'dimensions'    => '{
+                    x:600,
+                    y:300
+                }'
+            )
+        )
+    );
+?>
 <div id="blog">
     <span class="article_seperator">&nbsp;</span>
     <div class="calendar_icon">
