--- a/application/modules/ublog/views/scripts/index/view.phtml
+++ b/application/modules/ublog/views/scripts/index/view.phtml
@@ -1,11 +1,13 @@
 <?php
     $this->editor(
-        array('/uthando-js/MooTools/mooeditable/Source/MooEditable/MooEditable.js'),
-        array('/uthando-js/MooTools/mooeditable/Assets/MooEditable/MooEditable.css'),
+        'MooEditable', // plugin name
+        array(
+            'Smiley'
+        ), // plugins array
         array(
             'element'  => 'comment',
             'options'   => array(
-                'actions'       => "'bold italic underline strikethrough | formatBlock justifyleft justifyright justifycenter justifyfull | insertunorderedlist insertorderedlist indent outdent | undo redo | createlink unlink | toggleview'",
+                'actions'       => "'bold italic underline strikethrough | formatBlock justifyleft justifyright justifycenter justifyfull | insertunorderedlist insertorderedlist indent outdent | smiley | undo redo | createlink unlink | toggleview'",
                 'dimensions'    => '{
                     x:600,
                     y:300
