--- a/application/modules/ublog/views/scripts/index/view.phtml
+++ b/application/modules/ublog/views/scripts/index/view.phtml
@@ -55,7 +55,7 @@
     </div>
     <div id="comments">
         <h2>Comments:</h2>
-        <?php foreach ($this->comments as $comment): ?>
+        <?php foreach ($this->comments($this->blog->blogId)->getComments() as $comment): ?>
         <div class="commentWrap">
             <div class="commentAvatar">
                 <?= $this->gravatar(
